--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     <h1>Welcome to Le Wagon's Git & Github workshop!</h1>
+    <h2>Ready to learn?</h2>
+    	<p>We are learning how to use Git</p>
   </body>
 </html>
