--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Welcome to Le Wagon's Git & Github workshop!</h1>
     <h2>Ready to learn?</h2>
     	<p>We are learning how to use Git</p>
+    	<p>This is a test to see if this works!</p>
   </body>
 </html>
