--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h2>Ready to learn?</h2>
     	<p>We are learning how to use Git</p>
     	<p>This is a test to see if this works!</p>
+    	<p>This is the new paragraph for the new-branch</p>
   </body>
 </html>
